# GNUtility

./: .gitignore  .gitpod.yml  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  release.yml
cmake/: bundle.cmake  gnutility.cmake
include/: gnutility.hpp
src/: gnutility.cpp  tests.cpp
tests/: CMakeLists.txt  tests.cpp
